# HostsManager

./: .buildconfig  .editorconfig  .gitignore  AUTHORS  DEV.md  LICENSE  README.md  changelog.md  create_release.sh  meson.build  meson_options.txt
data/: com.github.gyan000.hostsmanager.appdata.xml.in  com.github.gyan000.hostsmanager.desktop.in  com.github.gyan000.hostsmanager.gresource.xml  com.github.gyan000.hostsmanager.pkexec.policy.in  com.github.spo-ijaz.hostsmanager.appdata.xml.in  com.github.spo-ijaz.hostsmanager.desktop.in  com.github.spo-ijaz.hostsmanager.gresource.xml  com.github.spo-ijaz.hostsmanager.pkexec.policy.in  meson.build  org.gnome.gitlab.spo-ijaz.hostsmanager.appdata.xml.in  org.gnome.gitlab.spo-ijaz.hostsmanager.desktop.in  org.gnome.gitlab.spo-ijaz.hostsmanager.gresource.xml  org.gnome.gitlab.spo-ijaz.hostsmanager.pkexec.policy.in
data/ui/: .xdp-main-window.ui-w5M5os  MainWindow.cmb  MainWindow.ui  app-shortcuts-window.cmb  app-shortcuts-window.ui  hosts-manager.css  main-window (copie).cmb  main-window.cmb  main-window.ui  main-window_builder_list_item_factory.cmb  main-window_column_views.cmb  main-window_signal_list_item_factory.cmb
data/ui/hosts_columns/: enabled.cmb  enabled.ui  hostname.cmb  hostname.ui  ip-address.cmb  ip-address.ui
fedora/: hostsmanager.spec
po/: POTFILES  com.github.spo-ijaz.hostsmanager.pot  de.po  es.po  fr.mo  fr.po  gl.po  it.po  nl.po  pt.po
po/extra/: POTFILES  com.github.spo-ijaz.hostsmanager.pot  fr.mo  fr.po
src/: HostsManager-pkexec.vala  HostsManager.vala  MainWindow (copie).vala  MainWindow.vala  MainWindow_builder_list_item_factory.vala  MainWindow_signal_list_item_factory.vala  meson.build
src/Filters/: HostRowFilter.vala
src/Models/: HostListModel.vala  HostRow.vala  HostRowListModel.vala  HostRowModel.vala
src/Services/: Config.vala  ConfigService.vala  HostsFile.vala  HostsFileService.vala  HostsRegex.vala  RegexCommentRow.vala  RegexHostGroupRow.vala  RegexHostRow.vala  RegexHostRowIpv4.vala  RegexHostRowIpv6.vala
src/Widgets/: BaseActionRow.vala  CommentActionRow.vala  CommentEditMessageDialog.vala  EditableCell.vala  HostActionRow.vala  HostGroupExpanderRow.vala  HostRow.vala  HostsListBox.vala  RowEditMessageDialog.vala
